ajustes no footer

--- a/Front-end/partials/footer.html
+++ b/Front-end/partials/footer.html
@@ -23,11 +23,14 @@
                 </div>
 
                 <div class="cnpj">
-                    <h2 class="text-cnpj">
-                        cnpj : 00.000.000/0000-01
-                    </h2>
+                    <h2 class="text-cnpj"> cnpj : 00.000.000/0000-01</h2>
+                 </div>
+                <div class="ultima-linha">
+                    <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>   
+               
+                    <h4 class="termo"> termo de uso | politica e privacidade </h4>
                 </div>
-
+               
             </div>
         </div>
     </footer>
