--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -79,7 +79,35 @@ font-size: 14px;
 line-height: 116%;
 text-transform: uppercase;
 color: #FFFFFF;
+}
 
+.ultima-linha{
+    display: flex;
+   
+}
 
+.email-phone{
+  /* gmbarbershop@mail.com | (11) 97777-0000 */
+display: inline-block;
+position: absolute;
+width: 416px;
+height: 20px;
+left: 206px;
+top: 70px;
+font-weight: normal;
+font-size: 14px;
+text-transform: uppercase;
+color: #FFFFFF;
 
+}
+
+.termo{
+/* termo de uso | politica e privacidade */
+position: absolute;
+left: 650px;
+top: 72px;
+font-weight: normal;
+font-size: 14px;
+text-transform: uppercase;
+color: #FFFFFF;
 }
