Adicionando logo de bandeiras no footer

--- a/Front-end/partials/footer.html
+++ b/Front-end/partials/footer.html
@@ -31,6 +31,12 @@
                     <h4 class="termo"> termo de uso | politica e privacidade </h4>
                 </div>
                
+                <div class="bandeiras">
+                    <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
+                    <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
+                    <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
+                </div>
+                <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer">
             </div>
         </div>
     </footer>
