--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -1,113 +1,162 @@
-.footer{
+.footer {
 
 
-position: absolute;
-width: 1497px;
-height: 151px;
-left: 0px;
-top: 440px;
-background: rgba(0, 0, 0, 0.98);
-
-}
-
-
-.container{
+    position: absolute;
+    width: 100%;
+    height: 151px;
+    left: 0px;
+    top: 440px;
+    background: rgba(0, 0, 0, 0.98);
 
 }
 
 
 
 
-.col-rede-sociais{
 
-}
-
-
-
-.titulo-rede-sociais{
+.titulo-rede-sociais {
 
     /* Redes sociais */
 
-position: absolute;
-width: 207px;
-height: 28px;
-left: 5px;
-top: 7px;
-text-align: center;
-text-transform: uppercase;
-color: #FFFFFF;
+    position: absolute;
+    width: 207px;
+    height: 28px;
+    left: 5px;
+    top: 7px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
 
-.logo-instagram{
+.logo-instagram {
 
     /* instagram 1 */
 
-position: absolute;
-width: 54px;
-height: 52px;
-left: 40px;
-top: 50px;
+    position: absolute;
+    width: 54px;
+    height: 52px;
+    left: 40px;
+    top: 50px;
 
-border-radius: 31px;
+    border-radius: 31px;
 
 
 }
 
-.logo-facebook{
+.logo-facebook {
 
     /* facebok 1 */
 
-position: absolute;
-width: 53px;
-height: 55px;
-left: 104px;
-top: 47px;
+    position: absolute;
+    width: 53px;
+    height: 55px;
+    left: 104px;
+    top: 47px;
 
-border-radius: 31px;
+    border-radius: 31px;
 
 
 }
+
 /* BASE DO MEIO , CNPJ */
-.cnpj{
- /* cnpj : 00.000.000/0000-01 */
+.cnpj {
+    /* cnpj : 00.000.000/0000-01 */
 
-position: absolute;
-height: 24px;
-left: 579px;
-top: 12px;
-font-size: 14px;
-line-height: 116%;
-text-transform: uppercase;
-color: #FFFFFF;
+    position: absolute;
+    height: 24px;
+    left: 670px;
+    top: 12px;
+    font-size: 14px;
+    line-height: 116%;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
 
-.ultima-linha{
+.ultima-linha {
     display: flex;
-   
-}
-
-.email-phone{
-  /* gmbarbershop@mail.com | (11) 97777-0000 */
-display: inline-block;
-position: absolute;
-width: 416px;
-height: 20px;
-left: 206px;
-top: 70px;
-font-weight: normal;
-font-size: 14px;
-text-transform: uppercase;
-color: #FFFFFF;
 
 }
 
-.termo{
-/* termo de uso | politica e privacidade */
-position: absolute;
-left: 650px;
-top: 72px;
-font-weight: normal;
-font-size: 14px;
-text-transform: uppercase;
-color: #FFFFFF;
+.email-phone {
+    /* gmbarbershop@mail.com | (11) 97777-0000 */
+    display: inline-block;
+    position: absolute;
+    width: 416px;
+    height: 20px;
+    left: 206px;
+    top: 70px;
+    font-weight: normal;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+}
+
+.termo {
+    /* termo de uso | politica e privacidade */
+    position: absolute;
+    left: 650px;
+    top: 72px;
+    font-weight: normal;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+
+.bandeiras {
+
+    display: flex;
+
+}
+
+.bandeira-visa {
+    /* visa-logo-5 1 */
+
+    position: absolute;
+    width: 62px;
+    height: 41px;
+    left: 65%;
+    top: 70px;
+
+}
+
+.bandeira-pagseguro {
+
+    /* Logo_PagSeguro 1 */
+
+    position: absolute;
+    width: 133px;
+    height: 44px;
+    left: 72%;
+    top: 70px;
+
+
+
+}
+
+.bandeira-elo {
+
+    /* elo-logo-1-1 1 */
+
+    position: absolute;
+    width: 76px;
+    height: 31px;
+    left: 85%;
+    top: 80px;
+
+
+}
+
+.logo-footer {
+
+    /* GM -logo-white 2 */
+
+    position: absolute;
+    width: 92px;
+    height: 91px;
+    left: 1302px;
+    top: 50px;
+    border-radius: 23px;
+
 }
