--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -5,13 +5,10 @@
     width: 100%;
     height: 151px;
     left: 0px;
-    top: 440px;
+    top: 540px;
     background: rgba(0, 0, 0, 0.98);
 
 }
-
-
-
 
 
 .titulo-rede-sociais {
@@ -151,12 +148,45 @@
 .logo-footer {
 
     /* GM -logo-white 2 */
-
     position: absolute;
-    width: 92px;
-    height: 91px;
-    left: 1302px;
-    top: 50px;
-    border-radius: 23px;
+    width: 119px;   
+    left: 92%;
+    top: 10px;
+}
 
+.container2{
+
+background-color: #FFFCF6;
+}
+.site-blindado{
+/* logo_siteblindado12 1 */
+
+position: absolute;
+width: 140px;
+left: 52px;
+top: 100%;
+}
+
+.ssl{
+/* ssl 1 */
+
+position: absolute;
+width: 90px;
+left: 253px;
+top: 100%;
+
+
+}
+
+.copy-right{
+/* COPYRIGHT@EMAIL.COM 2020 */
+position: absolute;
+width: 175px;
+left: 631px;
+top: 100%;
+font-weight: normal;
+font-size: 13px;
+text-transform: lowercase;
+font-feature-settings: 'pnum' on, 'lnum' on;
+color: #000000;
 }
