Realizado modificações no index

--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/footer.css">
-    <title>Document</title>
+    
+    <title>Index</title>
 </head>
 <body>
      <!--HEADER-->
@@ -96,5 +97,21 @@
 
      </footer>
 
+     <!--MAIN-->
+
+     <main>
+        <h1 class="titulo">GM BARBER SHOP, <br>
+            O clássico <br>
+            barba , cabelo e bigode </h1>
+           
+       
+            <a href="#" class="botao">
+                      <h1 class="titulo-botao">Marcar horario</h1> 
+            </a>
+                 
+            
+       
+            
+     </main>
 </body>
 </html>
