--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -102,7 +102,7 @@
      <main>
         <h1 class="titulo">GM BARBER SHOP, <br>
             O clássico <br>
-            barba , cabelo e bigode </h1>
+            barba , cabelo e bigode! </h1>
            
        
             <a href="#" class="botao">
