--- a/Front-end/style/index.css
+++ b/Front-end/style/index.css
@@ -45,7 +45,7 @@ body {
     width: 343px;
     height: 55px;
     left: 217px;
-    top: 600px;
+    top: 520px;
 
     background: #785034;
     border-radius: 60px;
@@ -56,7 +56,7 @@ body {
 
     /* mARCAR HORARIO */
 
-    position: fixed;
+    position: absolute;
     width: 343px;
     font-size: 30px;
     line-height: 142.5%;
