Criando a tela barbeiros

--- a/Front-end/partials/barbeiros.html
+++ b/Front-end/partials/barbeiros.html
@@ -3,113 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/barbeiros.css">
     <link rel="stylesheet" href="../style/footer.css">
     
-    <title>Páginas Barbeiros</title>
+    <title>Barbeiros</title>
 </head>
 <body>
-    <!--HEADER-->
-
-    <header class="papai">
-        <div class="logo">
-            <a href="#">
-             <img  class= "logoMain" src="../img/header/GM -logo-white.png" alt="">
-            </a>    
-        </div>
-
-        <ul class="nav">
-            <li class="nav-item">
-                <a class= "nav-link" href="#"> Sobre nós</a>
-
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="#"> Agendamento</a>
-
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="#"> Barbeiros</a>
-                
-            </li>        
-            <li class="nav-item">
-                <a class= "nav-link" href="#"> Localidade</a>
-                 
-            </li>
-            <li class="nav-item">
-                <a class= "nav-link" href="#"> Atendimento</a>
-                
-            </li>
-            
-            <li class="nav-item">
-                <a class= "nav-link" href="#"> Login</a>
-                
-            </li>
-        </ul>
-
-
-       </header>    
-
-
-
-
-
-
+    
        <main>
+            <h1 class="h1-barbeiros">
+                Barbeiros
+            </h1>
 
+            <div class="container-barbeiros">
+                <div class="barbeiro1">
+                    <h3 class="nome-barbeiro1">Bruno</h3>
+                    <img class="imagem-barbeiro1"src="../img/Background/Bruno.png" alt="Imagem barbeiro1 Bruno">
+                    <p class="texto-barbeiro1">Teve suas primeiras experiências cortando <br>cabelos no salão da família. Investiu em um <br>curso de barbeiro praticando em amigos e <br>vizinhos. O ex advogado, cansado da rotina <br>corporativa, decidiu mudar de vida e <br>investir em seu sonho de infância.</p>
+                </div>
+
+                <div class="barbeiro2">
+                    <h3 class="nome-barbeiro2">Felipe</h3>
+                    <img class="imagem-barbeiro2"src="../img/Background/felipe.jpg" alt="Imagem barbeiro 2 Felipe">
+                    <p class="texto-barbeiro2">Desde de 2000 atuando no ramo da beleza <br>como Profissional, com diversos cursos <br>nacionais e internacionais, com vasto <br>conhecimento nos mais diversos tipos e <br>texturas de cabelo e faz uma barba <br>impecável, como poucos.</p>
+                </div>
+            </div>
        </main>
 
 
 
 
-       <!--FOOTER-->
        
-       <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-rede-sociais">
-                         <h3 class="titulo-rede-sociais"> Rede Sociais</h3>
-                            <a  target = "_blank"  href="#">
-                                <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram">
-                            </a>
-
-                            <a  target = "_blank"  href="#">
-                                <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook">
-                                </a>
-                        
-                </div>
-
-                <div class="cnpj">
-                    <h2 class="text-cnpj"> cnpj : 00.000.000/0000-01</h2>
-                 </div>
-                <div class="ultima-linha">
-                    <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>   
-               
-                    <h4 class="termo"> termo de uso | politica e privacidade </h4>
-                </div>
-               
-                <div class="bandeiras">
-                    <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
-                    <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
-                    <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
-                </div>
-                <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer">
-            </div>
-        </div>
-    </footer>
-
-            <!--FOOTER II-->
-    
-     <footer class="footer-II">
-         <div class = "container2">
-            <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
-            <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
-            <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
-         </div>
-
-     </footer>
 
 
-
+       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
