--- a/Front-end/partials/agendamento.html
+++ b/Front-end/partials/agendamento.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/agendamento.css">
-    <link rel="stylesheet" href="../style/footer.css">
     
-    <title>Páginas Agendamento</title>
+    
+    <title>Agendamento</title>
 </head>
 <body>
     <!--HEADER-->
 
-       <header></header>
+       <header> 
+
+
+       </header>
         
-
-
-
-
-
-
        <main>
             <h1 class="agendamento-horario">Horários</h1>
             <section class="agendamento-time"> 05/01/2021</section>
@@ -31,61 +28,12 @@
                 <div class="botao-container-agendamento">Reservar Horario</div>
 
             </div>
-         
-            
        </main>
 
 
+       <footer>
 
-
-       <!--FOOTER-->
-       
-       <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-rede-sociais">
-                         <h3 class="titulo-rede-sociais"> Rede Sociais</h3>
-                            <a  target = "_blank"  href="#">
-                                <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram">
-                            </a>
-
-                            <a  target = "_blank"  href="#">
-                                <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook">
-                                </a>
-                        
-                </div>
-
-                <div class="cnpj">
-                    <h2 class="text-cnpj"> cnpj : 00.000.000/0000-01</h2>
-                 </div>
-                <div class="ultima-linha">
-                    <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>   
-               
-                    <h4 class="termo"> termo de uso | politica e privacidade </h4>
-                </div>
-               
-                <div class="bandeiras">
-                    <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
-                    <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
-                    <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
-                </div>
-                <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer">
-            </div>
-        </div>
-    </footer>
-
-            <!--FOOTER II-->
-    
-     <footer class="footer-II">
-         <div class = "container2">
-            <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
-            <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
-            <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
-         </div>
-
-     </footer>
-
-
+       </footer>
 
 </body>
 </html>
