--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -21,28 +21,28 @@
 
         <ul class="nav">
             <li class="nav-item">
-                <a class= "nav-link" href="#"> Sobre nós</a>
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
 
             </li>
             <li class="nav-item">
-                <a class= "nav-link" href="#"> Agendamento</a>
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
 
             </li>
             <li class="nav-item">
-                <a class= "nav-link" href="#"> Barbeiros</a>
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
                 
             </li>        
             <li class="nav-item">
-                <a class= "nav-link" href="#"> Localidade</a>
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
                  
             </li>
             <li class="nav-item">
-                <a class= "nav-link" href="#"> Atendimento</a>
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
                 
             </li>
             
             <li class="nav-item">
-                <a class= "nav-link" href="#"> Login</a>
+                <a class= "nav-link" href="login.html"> Login</a>
                 
             </li>
         </ul>
