Adicionando a linha no agendamento

--- a/Front-end/style/agendamento.css
+++ b/Front-end/style/agendamento.css
@@ -33,8 +33,10 @@ body {
     margin-top: 5vh;
     margin-left: 45vh;
     margin-right: 45vh;
+    
 
     justify-content: space-between;
+
 }
 
 
@@ -78,5 +80,10 @@ body {
     border: 1px solid #000000;
 
     height: 1px;
-    width: 90vh;
+    width: 95vh;
+
+    position: absolute;
+
+    margin-top: 85px;
+    margin-left: 40px;
 }
