--- a/Front-end/partials/agendamento.html
+++ b/Front-end/partials/agendamento.html
@@ -1,57 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/agendamento.css">
-    
-    
+
+
     <title>Agendamento</title>
 </head>
+
 <body>
     <!--HEADER-->
 
-       <header> 
+    <header>
 
 
-       </header>
-        
-       <main>
-            <h1 class="h1-agendamento-horario">Horários</h1>
-            
-            <section class="agendamento-time"> 05/01/2021</section>
-        
+    </header>
 
-          
-            <div class="container-main-agendamento">
-                <div class="date-time-container-agendamento"> 05/11/2021 09:00</div>
-                <div class="logo-container-agendamento">
-                    <img class="logo-agendamento"src="../img/header/GM -logo-black (1).png" alt="logo"></div>
-                <div class="barbeiro-container-agendamento">Barbeiro: Bruno</div>
-                <div class="botao-container-agendamento">Reservar Horario</div>
-            
-            
-               
+    <main>
+        <h1 class="h1-agendamento-horario">Horários</h1>
+        <section class="agendamento-time"> 05/01/2021</section>
+
+        <div class="container-main-agendamento">
+            <div class="date-time-container-agendamento">
+                05/11/2021 09:00
             </div>
-            <!-- <div class="line-agendamento"></div>  -->
+            <div class="logo-container-agendamento">
+                <img class="logo-agendamento" src="../img/header/GM -logo-black (1).png" alt="logo">
             </div>
-       
+            <div class="barbeiro-container-agendamento">
+                Barbeiro: Bruno
+            </div>
+            <div class="botao-container-agendamento">
+                Reservar Horario
+            </div>
+            <div class="line-agendamento">
 
-                      
-            
-
-       </main>
+            </div>
+        </div>
 
 
-       <footer>
 
-       </footer>
 
-       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
