--- a/Front-end/partials/barbeiros.html
+++ b/Front-end/partials/barbeiros.html
@@ -11,7 +11,45 @@
     <title>Barbeiros</title>
 </head>
 <body>
-    
+    <!--HEADER-->
+
+    <header class="papai">
+        <div class="logo">
+            <a href="#">
+             <img  class= "logoMain" src="../img/header/GM -logo-white.png" alt="">
+            </a>    
+        </div>
+
+        <ul class="nav">
+            <li class="nav-item">
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                
+            </li>        
+            <li class="nav-item">
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
+                 
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                
+            </li>
+            
+            <li class="nav-item">
+                <a class= "nav-link" href="login.html"> Login</a>
+                
+            </li>
+        </ul>
+
+
+       </header>    
        <main>
             <h1 class="h1-barbeiros">
                 Barbeiros
