--- a/Front-end/partials/agendamento.html
+++ b/Front-end/partials/agendamento.html
@@ -14,12 +14,45 @@
 </head>
 
 <body>
-    <!--HEADER-->
+    
+      <!--HEADER-->
+      <header class="papai">
+        <div class="logo">
+            <a href="#">
+             <img  class= "logoMain" src="../img/header/GM -logo-white.png" alt="">
+            </a>    
+        </div>
 
-    <header>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                
+            </li>        
+            <li class="nav-item">
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
+                 
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                
+            </li>
+            
+            <li class="nav-item">
+                <a class= "nav-link" href="login.html"> Login</a>
+                
+            </li>
+        </ul>
 
 
-    </header>
+       </header>
 
     <main>
         <h1 class="h1-agendamento-horario">Horários</h1>
