Ajustes de posicionamento no footer

--- a/Front-end/partials/footer.html
+++ b/Front-end/partials/footer.html
@@ -18,7 +18,7 @@
 
                             <a  target = "_blank"  href="#">
                                 <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook">
-                                </a>
+                            </a>
                         
                 </div>
 
@@ -39,17 +39,12 @@
                 <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer">
             </div>
         </div>
-    </footer>
-
-            <!--FOOTER II-->
-    
-     <footer class="footer-II">
-         <div class = "container2">
+        <!-- <div class = "container2">
             <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
             <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
             <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
-         </div>
+         </div> -->
+    </footer>
 
-     </footer>
 </body>
 </html>
