--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -1,10 +1,10 @@
 .footer {
-    position: fixed;
+    position: fixed;                
     width: 100%;
-    height: 151px;
+    height: 120px;
     left: 0px;
-    top: 100%;
     background: rgba(0, 0, 0, 0.98);
+    bottom: 0;
 
 }
 
@@ -16,7 +16,6 @@
     width: 207px;
     height: 28px;
     left: 5px;
-    top: 7px;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -29,9 +28,8 @@
     width: 54px;
     height: 52px;
     left: 40px;
-    top: 50px;
-
     border-radius: 31px;
+    bottom: 20px;
 }
 
 .logo-facebook {
@@ -40,9 +38,8 @@
     position: fixed;
     width: 53px;
     height: 55px;
-    left: 104px;
-    top: 47px;
-
+    left: 98px;
+    bottom: 18px;
     border-radius: 31px;
 }
 
@@ -51,13 +48,13 @@
     /* cnpj : 00.000.000/0000-01 */
 
     position: fixed;
-    height: 24px;
-    left: 670px;
-    top: 12px;
+    height: 28px;
+    left: 550px;
     font-size: 14px;
     line-height: 116%;
     text-transform: uppercase;
     color: #FFFFFF;
+    
 }
 
 .ultima-linha {
@@ -72,23 +69,23 @@
     width: 416px;
     height: 20px;
     left: 206px;
-    top: 70px;
     font-weight: normal;
     font-size: 14px;
     text-transform: uppercase;
     color: #FFFFFF;
+    bottom: 0;
 
 }
 
 .termo {
     /* termo de uso | politica e privacidade */
     position: fixed;
-    left: 650px;
-    top: 72px;
+    left: 550px;
     font-weight: normal;
     font-size: 14px;
     text-transform: uppercase;
     color: #FFFFFF;
+    bottom: 5px;
 }
 
 
@@ -100,10 +97,9 @@
     /* visa-logo-5 1 */
 
     position: fixed;
-    width: 62px;
-    height: 41px;
-    left: 65%;
-    top: 70px;
+    width: 55px;
+    bottom: 10px;
+    left: 67%;
 }
 
 .bandeira-pagseguro {
@@ -114,7 +110,7 @@
     width: 133px;
     height: 44px;
     left: 72%;
-    top: 70px;
+    bottom: 0;
 }
 
 .bandeira-elo {
@@ -123,31 +119,37 @@
 
     position: fixed;
     width: 76px;
-    height: 31px;
-    left: 85%;
-    top: 80px;
+    height: 28px;
+    left: 83%;
+    bottom: 10px;
 }
 
 .logo-footer {
 
     /* GM -logo-white 2 */
     position: fixed;
-    width: 119px;
-    left: 92%;
-    top: 10px;
+    width: 108px;
+    left: 90%;
 }
 
 .container2 {
 
-    background-color: #FFFCF6;
+    position: fixed;
+    width: 100%;
+    height: 120px;
+    left: 0px;
+    background: rgba(61, 14, 33, 0.509);
+    ;
 }
+    
+
 
 .site-blindado {
     /* logo_siteblindado12 1 */
     position: fixed;
     width: 140px;
     left: 52px;
-    top: 120%;
+    
 }
 
 .ssl {
