--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/footer.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     
     <title>Index</title>
 </head>
