--- a/Front-end/style/index.css
+++ b/Front-end/style/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../img/Background/thumbnail.jpg");
+    background-image: url("../img/Background/thumbnail_edited.jpg");
     /* thumbnail 2 */
 
 
@@ -13,12 +13,12 @@ body {
     /* GM BARBER SHOP, O clássico barba , cabelo e bigode */
 
     position: fixed;
-    width: 983.4px;
-    height: 409.86px;
+    width: 981.4px;
+    height: 341px;
     font-style: normal;
     font-weight: bold;
-    font-size: 52px;
-    line-height: 60px;
+    font-size: 60px;
+    line-height: 65px;
     display: flex;
     align-items: center;
     text-align: center;
@@ -26,7 +26,9 @@ body {
     color: #ffffff;
     mix-blend-mode: normal;
     transform: rotate(-0.37deg);
-    left: 140px;
+    left: 170px;
+    font-family: 'Bebas Neue', cursive;
+
 }
 
 .botao {
@@ -38,11 +40,11 @@ body {
     align-items: center;
     padding: 7px 2px;
 
-    position: absolute;
-    width: 343px;
+    position: fixed;
+    width: 300px;
     height: 55px;
-    left: 310px;
-    top: 370px;
+    left: 230px;
+    top: 325px;
 
     background: #785034;
     border-radius: 60px;
@@ -53,14 +55,12 @@ body {
 
     /* mARCAR HORARIO */
 
-    position: absolute;
-    width: 343px;
-    font-size: 30px;
+    position: initial;
+    width: 333px;
+    font-size: 28px;
     line-height: 142.5%;
     /* or 51px */
     text-align: center;
-    letter-spacing: -0.055em;
     text-transform: uppercase;
-    font-feature-settings: 'case'on;
     color: #FFFFFF;
 }
