--- a/Front-end/style/footer.css
+++ b/Front-end/style/footer.css
@@ -1,8 +1,8 @@
 .footer {
     position: fixed;                
     width: 100%;
-    height: 120px;
-    left: 0px;
+    height: 90px;
+    
     background: rgba(0, 0, 0, 0.98);
     bottom: 0;
 
@@ -14,32 +14,35 @@
 
     position: fixed;
     width: 207px;
-    height: 28px;
-    left: 5px;
+    left: 0;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 25px;
+    bottom: 39px;
+    right: 20px;
 }
 
 .logo-instagram {
     /* instagram 1 */
 
     position: fixed;
-    width: 54px;
-    height: 52px;
-    left: 40px;
+    width: 40px;
+    height: 42px;
+    left: 55px;
     border-radius: 31px;
-    bottom: 20px;
+    bottom: 5px;
 }
 
 .logo-facebook {
     /* facebok 1 */
 
     position: fixed;
-    width: 53px;
-    height: 55px;
+    width: 42px;
+    height: 45px;
     left: 98px;
-    bottom: 18px;
+    bottom: 5px;
     border-radius: 31px;
 }
 
@@ -48,12 +51,12 @@
     /* cnpj : 00.000.000/0000-01 */
 
     position: fixed;
-    height: 28px;
-    left: 550px;
-    font-size: 14px;
-    line-height: 116%;
+    height: 20px;
+    left: 470px;
     text-transform: uppercase;
     color: #FFFFFF;
+    font-family: 'Bebas Neue', cursive;
+    bottom: 60px;
     
 }
 
@@ -74,7 +77,7 @@
     text-transform: uppercase;
     color: #FFFFFF;
     bottom: 0;
-
+    font-family: 'Arial, Helvetica, sans-serif';
 }
 
 .termo {
@@ -85,6 +88,7 @@
     font-size: 14px;
     text-transform: uppercase;
     color: #FFFFFF;
+    font-family: 'Arial, Helvetica, sans-serif';
     bottom: 5px;
 }
 
@@ -97,7 +101,7 @@
     /* visa-logo-5 1 */
 
     position: fixed;
-    width: 55px;
+    width: 45px;
     bottom: 10px;
     left: 67%;
 }
@@ -107,7 +111,7 @@
     /* Logo_PagSeguro 1 */
 
     position: fixed;
-    width: 133px;
+    width: 120px;
     height: 44px;
     left: 72%;
     bottom: 0;
@@ -118,7 +122,7 @@
     /* elo-logo-1-1 1 */
 
     position: fixed;
-    width: 76px;
+    width: 70px;
     height: 28px;
     left: 83%;
     bottom: 10px;
@@ -128,7 +132,7 @@
 
     /* GM -logo-white 2 */
     position: fixed;
-    width: 108px;
+    width: 105px;
     left: 90%;
 }
 
@@ -172,4 +176,179 @@
     text-transform: lowercase;
     font-feature-settings: 'pnum'on, 'lnum'on;
     color: #000000;
+}
+
+
+/* RESPONSIVE */
+
+/* Desktop */
+
+@media(min-width:500px) and (max-width:700px){
+   
+    .cnpj {
+       
+       display: none;
+        
+    }
+    .email-phone {
+    
+        
+        left: 206px; 
+        font-size: 10px;
+        bottom: 40px;
+    }
+    .termo {
+        display: none;
+    }
+    
+.bandeira-visa {
+   
+    left: 35%;
+}
+
+.bandeira-pagseguro {
+    
+    left: 45%;
+}
+
+.bandeira-elo {
+
+    
+
+   
+    width: 53px;
+    height: 18px;
+    left: 71%;
+}
+
+.logo-footer {
+
+    /* GM -logo-white 2 */
+    position: fixed;
+    width: 100px;
+    left: 80%;
+}
+}
+@media(max-width:1250px){
+    .termo {
+        display:none;
+    }
+    .cnpj {
+        left: 200px;
+        font-size: 8px;
+    }
+        .email-phone {
+    
+        
+        left: 155px; 
+        font-size: 12px;
+        
+    }
+
+    .bandeira-visa {
+   
+      
+        position:absolute;
+    }
+
+    .bandeira-elo {
+        width: 53px;
+        height: 18px;
+      /* Resolver ainda */
+    }
+
+    
+}
+
+/* Android  = motog; Samsung; And old Iphone */
+
+@media(max-width:450px){
+    
+    .titulo-rede-sociais{
+        display: none;
+    }
+    .cnpj {
+       
+        bottom: 10px;
+         left: 40px;
+        
+         
+
+     }
+     .email-phone {
+     
+         
+         left: 10px; 
+         font-size: 12px;
+         bottom: 50px;
+     }
+     .termo {
+         display: none;
+     }
+     
+ .bandeira-visa {
+    
+     left: 35%;
+ }
+ 
+ .bandeira-pagseguro {
+     
+     left: 45%;
+ }
+ 
+ .bandeira-elo {
+ 
+     
+ 
+    
+     width: 53px;
+     height: 18px;
+     left: 71%;
+ }
+ 
+ .logo-footer {
+ 
+     /* GM -logo-white 2 */
+     position: fixed;
+     width: 100px;
+     left: 80%;
+ }
+ .logo-instagram {
+     left: 12px;
+    width: 50px;
+    height: 45px;
+    bottom: 22px;
+ }
+.logo-facebook{
+    left: 60px;
+    width: 52px;
+    height: 50px;
+    bottom: 20px;
+}
+.bandeira-elo{
+    display: none;
+}
+.bandeira-pagseguro{
+    display: none;
+}
+.bandeira-visa{
+    display: none;
+}
+.logo-footer{
+    left: 250px;
+    width: 105px;
+}
+}
+
+/* Iphone */
+
+@media(min-width:374px) and (max-width:450px){
+    .logo-footer{
+        left: 280px;
+    }
+    
+    .cnpj{
+        left: 70px;
+    }
+
 }
