--- a/Front-end/style/index.css
+++ b/Front-end/style/index.css
@@ -14,7 +14,7 @@ body {
 
     position: fixed;
     width: 981.4px;
-    height: 341px;
+    height: 391px;
     font-style: normal;
     font-weight: bold;
     font-size: 60px;
@@ -41,10 +41,10 @@ body {
     padding: 7px 2px;
 
     position: fixed;
-    width: 300px;
-    height: 55px;
-    left: 230px;
-    top: 325px;
+    width: 235px;
+    height: 50px;
+    left: 290px;
+    top: 305px;
 
     background: #785034;
     border-radius: 60px;
@@ -55,12 +55,116 @@ body {
 
     /* mARCAR HORARIO */
 
-    position: initial;
-    width: 333px;
-    font-size: 28px;
-    line-height: 142.5%;
+    position: fixed;
+    width: 253px;
+    font-size: 23px;
+    line-height: 190.5%;
     /* or 51px */
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+   font-family:'Arial, Helvetica, sans-serif';
+    left: 285px;
+    
+    
 }
+.titulo-botao:hover {
+    color: black;
+    
+}
+
+
+/* RESPONSIVE */
+
+
+/* DESKTOP */
+
+@media(min-width:500px) and (max-width:700px){
+    .titulo{
+    
+        left: 50px;
+        top: 80px;
+        font-size: 55px;
+        }
+    
+        
+        .botao {
+        
+            left: 180px;
+            top: 400px;
+        
+        }
+    
+        .titulo-botao {
+    
+            left: 175px;  
+        }
+        
+    
+
+}
+
+
+/* Android  = motog; Samsung; And old Iphone */
+
+@media(max-width:450px){
+
+    .titulo{
+    position: fixed;
+    width: 328.4px;
+    height: 392px;
+    line-height: 50px;
+    transform: rotate(-0.37deg);
+    font-family: 'Bebas Neue', cursive;
+    left: 10px;
+    top: 60px;
+    font-size: 50px;    
+}
+
+    .botao {
+    
+        left: 60px;
+        top: 385px;
+    
+    }
+
+    .titulo-botao {
+
+        left: 50px;  
+    }
+    
+}
+
+/* Iphone 6/7/8Plus */
+
+@media(min-width:400px) and (max-width:450px){
+
+    .titulo{
+    
+    left: 50px;
+    top: 80px;
+    font-size: 50px;
+    }
+
+    
+    .botao {
+    
+        left: 95px;
+        top: 400px;
+    
+    }
+
+    .titulo-botao {
+
+        left: 85px;  
+    }
+    
+}
+
+
+
+/* Ipad*/
+/* 
+@media(min-width:1200px) and (max-width: 1400px)
+
+*/
