--- a/Front-end/partials/sobre.html
+++ b/Front-end/partials/sobre.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/sobre.css">
 </head>
 <body>
+
     
+    <div class="container">
+        <div class="row">
+          <div class="col-sm">
+
+            <h4 class="titulo_sobre"> SOBRE NÓS </h4>
+
+            <p> A gM barber  é  especializada nos cuidados estéticos e do bem-estar masculino. Contando com profissionais experientes no mercado, atuamos não somente no corte, mas oferecemos uma experiência de conforto, favorecendo a mente um momento de relaxamento e descanso.
+
+Um ambiente preparado com profissionalismo para que não tenhamos apenas clientes, mas amigos. Cremos que a ética no local de trabalho deve ser algo que traga conforto para os nossos clientes amigos, criando uma ambiência de bem-estar e confiabilidade.
+
+Um clube favorece e trás benefícios para os seus membros, aqui no Club GM não é diferente! Você terá acesso aos melhores produtos para seu cabelo e barba, sem nenhum adicional no valor por isso, porque se tratando de você, toda atenção é dedicada.
+
+Agende hoje mesmo um horário, e veja com seus próprios olhos que fazer parte do Club GM vai além de um momento, é um privilégio.
+
+Bem-Vindo ao Club! </p>
+          </div>
+          <div class="col-sm">
+            <img src="../img/header/GM -logo-black (1).png" alt="" class="imagem_sobre">
+          </div>
+        </div>
+      </div>
+
+
+    
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
 </body>
 </html>
