--- a/Front-end/style/sobre.css
+++ b/Front-end/style/sobre.css
@@ -1,3 +1,12 @@
 * {
     box-sizing: border-box;
 }
+
+.imagem_sobre {
+    width: 100px;
+}
+
+.titulo_sobre {
+    text-align: center;
+    text-decoration: underline;
+}
