--- a/Front-end/partials/agendamento.html
+++ b/Front-end/partials/agendamento.html
@@ -19,8 +19,7 @@
       <!--HEADER-->
       <header class="papai">
         <div class="logo">
-            <a href="#">
-             <img  class= "logoMain" src="../img/header/GM -logo-white.png" alt="">
+            <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
             </a>    
         </div>
 
