--- a/Front-end/partials/barbeiros.html
+++ b/Front-end/partials/barbeiros.html
@@ -12,11 +12,9 @@
 </head>
 <body>
     <!--HEADER-->
-
     <header class="papai">
         <div class="logo">
-            <a href="#">
-             <img  class= "logoMain" src="../img/header/GM -logo-white.png" alt="">
+            <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
             </a>    
         </div>
 
@@ -49,7 +47,7 @@
         </ul>
 
 
-       </header>    
+       </header>
        <main>
             <h1 class="h1-barbeiros">
                 Barbeiros
