--- a/Front-end/partials/sobre.html
+++ b/Front-end/partials/sobre.html
@@ -9,7 +9,43 @@
 </head>
 <body>
 
-    
+    <!--HEADER-->
+    <header class="papai">
+      <div class="logo">
+          <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
+          </a>    
+      </div>
+
+      <ul class="nav">
+          <li class="nav-item">
+              <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+          </li>
+          <li class="nav-item">
+              <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+          </li>
+          <li class="nav-item">
+              <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+              
+          </li>        
+          <li class="nav-item">
+              <a class= "nav-link" href="localidade.html"> Localidade</a>
+               
+          </li>
+          <li class="nav-item">
+              <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+              
+          </li>
+          
+          <li class="nav-item">
+              <a class= "nav-link" href="login.html"> Login</a>
+              
+          </li>
+      </ul>
+
+
+     </header>
     <div class="container">
         <div class="row">
           <div class="col-sm">
