criação da tela de atendimento

--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -90,14 +90,14 @@
 
             <!--FOOTER II-->
     
-     <footer class="footer-II">
+     <!-- <footer class="footer-II">
          <div class = "container2">
             <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
             <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
             <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
          </div>
 
-     </footer>
+     </footer> -->
 
      <!--MAIN-->
 
