--- a/Front-end/partials/sobre.html
+++ b/Front-end/partials/sobre.html
@@ -6,32 +6,111 @@
     <title>Sobre Nós</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/sobre.css">
+    <link rel="stylesheet" href="../style/footer.css">
+    <link rel="stylesheet" href="../style/header.css">
 </head>
 <body>
 
+    <header class="papai">
+        <div class="logo">
+            <a href="index.html">
+             <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
+            </a>    
+        </div>
+
+        <ul class="nav">
+            <li class="nav-item">
+                <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="agendamento.html"> Agendamento</a>
+
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+                
+            </li>        
+            <li class="nav-item">
+                <a class= "nav-link" href="localidade.html"> Localidade</a>
+                 
+            </li>
+            <li class="nav-item">
+                <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+                
+            </li>
+            
+            <li class="nav-item">
+                <a class= "nav-link" href="login.html"> Login</a>
+                
+            </li>
+        </ul>
+
+
+       </header>
+       
+
     
-    <div class="container">
+    <div class="container sobre_nos">
         <div class="row">
           <div class="col-sm">
 
             <h4 class="titulo_sobre"> SOBRE NÓS </h4>
-
-            <p> A gM barber  é  especializada nos cuidados estéticos e do bem-estar masculino. Contando com profissionais experientes no mercado, atuamos não somente no corte, mas oferecemos uma experiência de conforto, favorecendo a mente um momento de relaxamento e descanso.
-
+                <br>
+            <p class="texto_sobre"> A gM barber  é  especializada nos cuidados estéticos e do bem-estar masculino. Contando com profissionais experientes no mercado, atuamos não somente no corte, mas oferecemos uma experiência de conforto, favorecendo a mente um momento de relaxamento e descanso.
+                <br><br>
 Um ambiente preparado com profissionalismo para que não tenhamos apenas clientes, mas amigos. Cremos que a ética no local de trabalho deve ser algo que traga conforto para os nossos clientes amigos, criando uma ambiência de bem-estar e confiabilidade.
-
+                <br><br>
 Um clube favorece e trás benefícios para os seus membros, aqui no Club GM não é diferente! Você terá acesso aos melhores produtos para seu cabelo e barba, sem nenhum adicional no valor por isso, porque se tratando de você, toda atenção é dedicada.
-
+                <br><br>
 Agende hoje mesmo um horário, e veja com seus próprios olhos que fazer parte do Club GM vai além de um momento, é um privilégio.
-
+                <br><br>
 Bem-Vindo ao Club! </p>
           </div>
           <div class="col-sm">
-            <img src="../img/header/GM -logo-black (1).png" alt="" class="imagem_sobre">
+            <img src="../img/Background/IMG_0518.jpg" alt="" class="imagem_sobre">
           </div>
         </div>
       </div>
 
+      <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-rede-sociais">
+                         <h3 class="titulo-rede-sociais"> Rede Sociais</h3>
+                            <a  target = "_blank"  href="#">
+                                <img src="../img/footer/instagram.jpg" alt="link-instagram" class="logo-instagram">
+                            </a>
+
+                            <a  target = "_blank"  href="#">
+                                <img src="../img/footer/facebok.jpg" alt="link-facebook" class="logo-facebook">
+                            </a>
+                        
+                </div>
+
+                <div class="cnpj">
+                    <h2 class="text-cnpj"> cnpj : 00.000.000/0000-01</h2>
+                 </div>
+                <div class="ultima-linha">
+                    <h4 class="email-phone"> gmbarbershop@mail.com     | (11) 97777-0000</h4>   
+               
+                    <h4 class="termo"> termo de uso | politica e privacidade </h4>
+                </div>
+              
+                <div class="bandeiras">
+                    <img src="../img/footer/visa-logo-5.png" alt="visa" class="bandeira-visa">
+                    <img src="../img/footer/Logo_PagSeguro.png" alt="pagseguro" class="bandeira-pagseguro">
+                    <img src="../img/footer/elo-logo-1-1.png" alt="elo" class="bandeira-elo">
+                </div>
+                <img src="../img/header/GM -logo-white.png" alt="logo-footer" class="logo-footer">
+            </div>
+        </div>
+        <!-- <div class = "container2">
+            <img src="../img/footer/logo_siteblindado12.jpg" alt="site-blindado" class="site-blindado">
+            <img src="../img/footer/ssl.png" alt="ssl" class="ssl">
+            <h2 class="copy-right"> COPYRIGHT@EMAIL.COM  2020</h2>
+         </div> -->
+    </footer>
 
     
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
