--- a/Front-end/partials/agendamento.html
+++ b/Front-end/partials/agendamento.html
@@ -15,12 +15,10 @@
 </head>
 
 <body>
-    
-      <!--HEADER-->
-      <header class="papai">
+    <!--HEADER-->
+    <header class="papai">
         <div class="logo">
-            <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
-             
+            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
         </div>
 
         <ul class="nav">
@@ -50,9 +48,8 @@
                 
             </li>
         </ul>
-
-
        </header>
+      
 
     <main>
         <h1 class="h1-agendamento-horario">Horários</h1>
