--- a/Front-end/partials/barbeiros.html
+++ b/Front-end/partials/barbeiros.html
@@ -14,8 +14,7 @@
     <!--HEADER-->
     <header class="papai">
         <div class="logo">
-            <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
-            </a>    
+            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
         </div>
 
         <ul class="nav">
@@ -45,8 +44,6 @@
                 
             </li>
         </ul>
-
-
        </header>
        <main>
             <h1 class="h1-barbeiros">
