--- a/Front-end/partials/header.html
+++ b/Front-end/partials/header.html
@@ -11,8 +11,7 @@
        <!--HEADER-->
        <header class="papai">
         <div class="logo">
-            <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
-            </a>    
+            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
         </div>
 
         <ul class="nav">
@@ -42,8 +41,6 @@
                 
             </li>
         </ul>
-
-
        </header>
        
 </body>
