--- a/Front-end/partials/index.html
+++ b/Front-end/partials/index.html
@@ -13,12 +13,10 @@
     <title>Index</title>
 </head>
 <body>
-      
-    <!--HEADER-->
-    <header class="papai">
+      <!--HEADER-->
+      <header class="papai">
         <div class="logo">
-            <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
-            </a>    
+            <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
         </div>
 
         <ul class="nav">
@@ -48,9 +46,8 @@
                 
             </li>
         </ul>
-
-
        </header>
+    
 
        <!--FOOTER-->
        
