--- a/Front-end/partials/sobre.html
+++ b/Front-end/partials/sobre.html
@@ -5,47 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/sobre.css">
 </head>
 <body>
+  <!--HEADER-->
+  <header class="papai">
+    <div class="logo">
+        <a href="index.html"><img src="../img/header/GM -logo-white.png" class="logoMain" alt="Logo"> </a>          
+    </div>
 
-    <!--HEADER-->
-    <header class="papai">
-      <div class="logo">
-          <img src="../img/header/GM -logo-white.png" class= "logoMain" alt="">
-          </a>    
-      </div>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class= "nav-link" href="sobre.html"> Sobre nós</a>
 
-      <ul class="nav">
-          <li class="nav-item">
-              <a class= "nav-link" href="sobre.html"> Sobre nós</a>
+        </li>
+        <li class="nav-item">
+            <a class= "nav-link" href="agendamento.html"> Agendamento</a>
 
-          </li>
-          <li class="nav-item">
-              <a class= "nav-link" href="agendamento.html"> Agendamento</a>
-
-          </li>
-          <li class="nav-item">
-              <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
-              
-          </li>        
-          <li class="nav-item">
-              <a class= "nav-link" href="localidade.html"> Localidade</a>
-               
-          </li>
-          <li class="nav-item">
-              <a class= "nav-link" href="atendimento.html"> Atendimento</a>
-              
-          </li>
-          
-          <li class="nav-item">
-              <a class= "nav-link" href="login.html"> Login</a>
-              
-          </li>
-      </ul>
-
-
-     </header>
+        </li>
+        <li class="nav-item">
+            <a class= "nav-link" href="barbeiros.html"> Barbeiros</a>
+            
+        </li>        
+        <li class="nav-item">
+            <a class= "nav-link" href="localidade.html"> Localidade</a>
+             
+        </li>
+        <li class="nav-item">
+            <a class= "nav-link" href="atendimento.html"> Atendimento</a>
+            
+        </li>
+        
+        <li class="nav-item">
+            <a class= "nav-link" href="login.html"> Login</a>
+            
+        </li>
+    </ul>
+   </header>
+    
     <div class="container">
         <div class="row">
           <div class="col-sm">
