atualização do css na page de atendimento

--- a/Front-end/partials/atendimento.html
+++ b/Front-end/partials/atendimento.html
@@ -16,27 +16,27 @@
          <h1 class="titulo"> Atendimento</h1>
          <div class="container-pai">
              <div class="endereco">
-             <h2>Endereço</h2> <br>
+             <h2>Endereço</h2> 
              <h2 class="info"> Rua Cardeal Arcoverde, 1571 - Pinheiros, São Paulo SP</h2> <br>
              </div>
-             <div class="atendimento">
+              <div class="atendimento">
                 <h2>Atendimento</h2> <br><br>
-                <img src="../img/Background/clock.png" alt="" class="clock">
-                <h2>  Seg das 13h00 às 20h00 </h2> <br>
-                <img src="../img/Background/clock.png" alt="" class="clock">
-                <h2>  Ter à sex das 10h00 às 20h00</h2> <br>
-                <img src="../img/Background/clock.png" alt="" class="clock">
-                <h2> Sáb das 10h00 às 18h00</h2>
+                <img src="../img/Background/clock.png" alt="">
+                <h2 class="horario">  Seg das 13h00 às 20h00 </h2> <br>
+                <img src="../img/Background/clock.png" alt="" >
+                <h2 class="horario">  Ter à sex das 10h00 às 20h00</h2> <br>
+                <img src="../img/Background/clock.png" alt="" >
+                <h2 class="horario"> Sáb das 10h00 às 18h00</h2>
              </div>
-             <div class="newsletter">
+             <!-- <div class="newsletter">
                  <h1>NEWSLETTER</h1> <br>
                  <h2>Cadastre-se em nossa newsletter e receba novidades sobre lifestyle direto na sua caixa postal.</h2> <br>
                  <form action="" class="form">
                      <input type="email" name="email" id="email"  placeholder="Email">
-                     <input type="submit" value="Enviar">
-                 </form>
+                     <input type="submit" value="Enviar" class="submit">
+                 </form> 
 
-             </div>
+             </div> -->
          </div>     
      </main>
      
