--- a/Front-end/style/atendimento.css
+++ b/Front-end/style/atendimento.css
@@ -13,26 +13,42 @@
     position: fixed;
     left: 200px;
     top: 90px;
+    flex-direction: column;
 }
 
 .endereco{
+
    
-    font-size: 30px;
+
 }
+
+
 .info{
     font-size: 15px;
+
 }
 
 .atendimento{
+     
     font-size: 2px;
+    
 }
 
-/* Rectangle 5 */
-/* 
-position: absolute;
-width: 1056px;
-height: 457px;
-left: 174px;
-top: 280px; */
+.horario{
+     
+    font-size: 25px;
+
+}
+
+
+
+/*.form{
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    padding-right: 130px;
+    padding-left: 1rem;
+} */
+
 
 
