Fianlizando tela de Login

--- a/Front-end/partials/login.html
+++ b/Front-end/partials/login.html
@@ -46,12 +46,11 @@
         </ul>
        </header>
 
-
        <div class="login"> 
-           <h3>ENTRAR</h3>
-           <hr>
-           <br>
-       <form>
+       <form class="background_login">
+        <h3>ENTRAR</h3>
+        <hr>
+        <br>
         <div class="form-group">
           <label for="exampleInputEmail1">Endereço de e-mail</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="seuemail@exemplo.com">
@@ -66,9 +65,9 @@
           <label class="form-check-label" for="exampleCheck1">Salvar senha</label>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
+        <hr>
+        <p class="cadastre-se"> Não tem conta? <a href="/"> Cadastre-se </a></p>
       </form>
-      <hr>
-      <p class="cadastre-se"> Não tem conta? <a href="/"> Cadastre-se </a></p>
       </div>
 
 </body>
