--- a/Front-end/style/atendimento.css
+++ b/Front-end/style/atendimento.css
@@ -1,54 +1,13 @@
-.titulo{
-    font-size: 25px;
-    font-family:Arial, Helvetica, sans-serif;
-    top: 50px;
+.container{
+   margin-top: 40px;
+   font-family: 'Times New Roman', Times, serif;
+}
+.container1{
+    margin-left: 50%;
+    margin-top: 10px;
+}
+h1.display-5{
+   margin-right: 700px;
 }
 
-.container-pai{
-    display: flex;
-    background-color: #CAC9C8;
-    padding: 66px;
-    width: 860px;
-    height: 500px;
-    position: fixed;
-    left: 200px;
-    top: 90px;
-    flex-direction: column;
-}
-
-.endereco{
-
-   
-
-}
-
-
-.info{
-    font-size: 15px;
-
-}
-
-.atendimento{
-     
-    font-size: 2px;
-    
-}
-
-.horario{
-     
-    font-size: 25px;
-
-}
-
-
-
-/*.form{
-    width: 100%;
-    height: 50px;
-    border-radius: 25px;
-    padding-right: 130px;
-    padding-left: 1rem;
-} */
-
-
-
+ 
